[tool.poetry]
name = "byu_jwt"
version = "2.0.0"
description = ""
authors = ["Nate Peterson <nate_peterson@byu.edu>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/byu-oit/byu-jwt-python"
repository = "https://github.com/byu-oit/byu-jwt-python"

[tool.poetry.dependencies]
python = "^3.4"
requests = "^2.21"
pyjwt = "^1.7"
cryptography = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
