[tool.poetry]
name = "byu_jwt"
version = "2.1.0"
description = ""
authors = ["Application Engineering <oit-developer@byu.edu>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/byu-oit/byu-jwt-python"
repository = "https://github.com/byu-oit/byu-jwt-python"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32"
pyjwt = "^2.10"
cryptography = ">=3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
